# dataprism

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md
engine/: .env.example  .gitignore  README.md  alembic.ini  makefile  pyproject.toml  requirements.txt  run.py
engine/app/: main.py
engine/app/api/: api.py  deps.py
engine/app/api/routers/: chat.py  code.py  health.py  kg.py  matrix.py  mcp.py  upload.py  workspace.py
engine/app/api/schema/: chat.py  kg.py  matrix.py  mcp.py  upload.py  workspace.py
engine/app/cloud/: __init__.py
engine/app/cloud/cf/: r2_client.py
engine/app/core/: config.py
engine/app/db/: session.py
engine/app/db/migrations/: env.py
engine/app/db/models/: block.py  block_matrix.py  document.py  upload.py  vector_embedding.py  workspace.py  workspace_upload.py
engine/app/integration/: MCPManager.py
engine/app/integration/_utils/: __init__.py
engine/app/integration/postgres/: _schema.py  docker-compose.yaml  runner.py
engine/app/kg/: __init__.py  _error.py  _schema.py  graph_manager.py
engine/app/llm/modules/: __init__.py
engine/app/llm/modules/code/: __init__.py  _schema.py  (+1 more)
engine/app/mcp/: MCPManager.py  __init__.py  _schema.py
engine/app/mcp/_utils/: base_mcp_runner.py
engine/app/mcp/postgres/: __init__.py  _schema.py  docker-compose.yaml  runner.py
engine/app/pipeline/: __init__.py  _schema.py
engine/app/pipeline/learning/: __init__.py  pipeline.py
engine/app/pipeline/modules/: _schema.py
engine/app/pipeline/tools/: __init__.py  generate_embedding.py  parquet_schema.py  similarity_search.py
engine/app/services/: csv.py  duck_db.py
engine/app/services/chat/: __init__.py  chat.py
engine/app/services/upload/: csv.py
engine/app/settings/: config.py
engine/app/utils/: logging_config.py
engine/app/workers/: __init__.py  multiprocessing_worker_queue.py  threadpool_worker_queue.py
engine/docker/neo4j_service/: Dockerfile  docker-compose.yml
engine/docker/neo4j_service/conf/: custom.conf
engine/mlruns/0/: meta.yaml
(+220 files in other folders)
