[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "axiom-py>=0.9.0",
    "boto3>=1.38.5",
    "dspy>=2.6.23",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "google-genai>=1.15.0",
    "mlflow>=3.1.0",
    "pandas>=2.2.3",
    "pgvector>=0.4.1",
    "protobuf==3.20.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pytest-cov~=5.0",
    "pytest~=8.2",
    "python-multipart>=0.0.20",
    "ruff>=0.11.7",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
    "pytest-mock~=3.14",
    "httpx~=0.27",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = ["tests"]
